# WFiIS-PREOOP-3rd-semester

./: README.md  create.sh
Lab10/: CMakeLists.txt
Lab10/include/: Grade.h  GradeBook.h
Lab10/src/: Grade.cpp  GradeBook.cpp
Lab11 MultiExecs/: CMakeLists.txt
Lab11 MultiExecs/Executables/: CMakeLists.txt
Lab11 MultiExecs/Executables/src/: grades.cpp  school.cpp  students.cpp
Lab11 MultiExecs/GradeBook/include/: Grade.h  GradeBook.h
Lab11 MultiExecs/GradeBook/src/: Grade.cpp  GradeBook.cpp
Lab11 MultiExecs/School/: CMakeLists.txt  create.sh
Lab11 MultiExecs/School/include/: School.h
Lab11 MultiExecs/School/src/: School.cpp
Lab11 MultiExecs/StudentList/include/: StudentsList.h
Lab12/: CMakeLists.txt  Main.cpp
Lab12/include/: MyString.h
Lab12/src/: MyString.cpp
Lab13/: CMakeLists.txt  Main.cpp
Lab13/include/: BContainer.h  Box.h  Volume.h
Lab13/src/: BContainer.cpp  Box.cpp  Volume.cpp
Lab14/: CMakeLists.txt  Main.cpp
Lab14/include/: Point2D.h  Point2DSmartPtr.h  PointAverage.h
Lab14/src/: Point2D.cpp  Point2DSmartPtr.cpp  PointAverage.cpp
Lab3/: HarmonicSeries.cpp  HarmonicSeries.h  Main.cpp  makefile
Lab4/: GeometricSeries.cpp  GeometricSeries.h  Main.cpp  makefile
Lab5/: CMakeLists.txt
Lab5/include/: GeometricSeries.h  HarmonicSeries.h  SeriesOperations.h
Lab5/src/: GeometricSeries.cpp  HarmonicSeries.cpp  SeriesOperations.cpp
Lab7/: Main.cpp
Lab7/include/: MapDistance.h  MapPoint.h
Lab7/src/: MapDistance.cpp  MapPoint.cpp
Lab8/: Main.cpp
Lab8/include/: Coordinates.h  MapPoint.h
Lab8/src/: Coordinates.cpp  MapPoint.cpp
Lab9/: CMakeLists.txt
Lab9/include/: Student.h
Lab9/src/: Student.cpp  StudentsList.cpp
